<resources>
    <string name="app_name">NextFelix</string>
    <string name="signup_title">Sign Up</string>
    <string name="sing_in_title">Welcome</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_login_in">Log in</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="user_name">Username</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="movie_name">Movie Name</string>
    <string name="description">Description</string>
    <string name="release_year">Release Year:</string>
    <string name="rating">Rating:</string>

    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NextFelix</string>
    <string name="nav_header_subtitle">next-gen streaming app</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_movie_admin">Movie Admin</string>
    <string name="menu_category_admin">Category Admin</string>
    <string name="menu_search">Search</string>

    <string name="movie_admin">Movie Admin</string>
    <string name="movie_name_hint">Enter movie name</string>
    <string name="movie_description_hint">Enter movie description</string>
    <string name="movie_length_hint">Enter movie length</string>
    <string name="movie_rating__hint">Enter movie rating</string>
    <string name="movie_release_year_hint">Enter release year</string>
    <string name="movie_file_hint">Choose Movie File</string>
    <string name="movie_thumbnail_hint">Choose Thumbnail File</string>
    <string name="movie_id_hint">Enter movie ID, or leave empty for new one</string>

    <string name="category_admin_title">Category Admin</string>
    <string name="category_name_hint">Enter Category Name</string>
    <string name="promoted">Promoted</string>
    <string name="place_holder">place_holder</string>
    <string name="watch_now">Watch Now</string>
    <string name="close">close</string>
    <string name="movie_categories_hint">Enter comma separated list of categories ID</string>
    <string name="category_id_hint">Enter category ID, or leave empty for new one</string>

    <string name="required">Required</string>
    <string name="delete">Delete</string>
    <string name="create_or_update">Create/Update</string>
    <string name="home_page_no_login_title">Explore movies </string>
    <string name="home_page_no_login_sub_title">Watch anywhere , Cancel anytime. </string>
    <string name="home_page_no_login_ready_to">Ready to watch? Click on the buttons below </string>
    <string name="dark_light_mode">Dark/Light Mode</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="recommendations">Recommendations</string>


</resources>