<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_movie_admin"
            android:icon="@drawable/ic_admin_panel_settings"
            android:title="@string/menu_movie_admin" />
        <item
            android:id="@+id/nav_category_admin"
            android:icon="@drawable/ic_admin_panel_settings"
            android:title="@string/menu_category_admin" />
    </group>
</menu>