<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.home.CreateMovieFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/create_movie"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/movie_name_hint"
        android:importantForAccessibility="yes"
        android:inputType="text"
        android:maxLength="50"
        android:required="true" />


    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/movie_description_hint"
        android:importantForAccessibility="yes"
        android:inputType="textMultiLine"
        android:maxLength="200"
        android:required="true" />


    <EditText
        android:id="@+id/length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/movie_length_hint"
        android:importantForAccessibility="yes"
        android:inputType="number"
        android:minEms="1"
        android:required="true" />


    <EditText
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/movie_rating__hint"
        android:importantForAccessibility="yes"
        android:inputType="numberDecimal"
        android:max="5"
        android:maxLength="1"
        android:min="0" />


    <EditText
        android:id="@+id/releaseYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/movie_release_year_hint"
        android:inputType="number"
        android:required="true" />


    <Button
        android:id="@+id/movieFileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="yes"
        android:text="@string/movie_file_hint" />


    <Button
        android:id="@+id/thumbnailFileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="yes"
        android:text="@string/movie_thumbnail_hint" />

    <!-- Submit button -->
    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:importantForAccessibility="yes"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>
