<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.HomePageNonLogIn">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668">
        <!--Title-->
        <TextView
            android:id="@+id/TextViewHomePageNoLogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/home_page_no_login_title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/TextViewHomePageNoLogSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/home_page_no_login_sub_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TextViewHomePageNoLogReadyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/home_page_no_login_ready_to"
            android:textColor="@color/black"
            android:textSize="17sp" />


        <Button
            android:id="@+id/buttonSignInHomePageNoLog"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/button_login_in"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="16sp" />


        <Button
            android:id="@+id/buttonSignUpHomePageNoLog"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/button_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="16sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>