<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_margin="32dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <!--Title-->
        <TextView
            android:id="@+id/textViewSignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />
        <!--first name-->
        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textSize="11sp"
            android:layout_marginBottom="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@color/gray" />
        <!--last name-->
        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textSize="11sp"
            android:layout_marginBottom="10dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@color/gray" />
        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textSize="11sp"
            android:layout_marginBottom="10dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@color/gray" />

        <!--password-->
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:textSize="11sp"
            android:background="@android:color/transparent"
            android:layout_marginBottom="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="@color/gray" />

        <!-- CONFIRM PASSWORD -->
        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:textSize="11sp"
            android:background="@android:color/transparent"
            android:layout_marginBottom="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="24dp"
            android:background="@color/gray" />


        <Button
            android:id="@+id/buttonUploadPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_photo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/red" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/red" />


        <ImageView
            android:id="@+id/reg_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:scaleType="centerCrop"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
