<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.MovieDetailsActivity">

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_holder"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/movie_image" />


    <ImageView
        android:id="@+id/movie_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_admin_panel_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_title" />

    <LinearLayout
        android:id="@+id/movie_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_image">

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_holder"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Rating Text -->
            <TextView
                android:id="@+id/rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:text="@string/rating"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Star 1 -->
            <ImageView
                android:id="@+id/star1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/star"
                app:tint="@android:color/holo_red_dark" />

            <!-- Star 2 -->
            <ImageView
                android:id="@+id/star2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/star"
                app:tint="@android:color/holo_red_dark"/>

            <!-- Star 3 -->
            <ImageView
                android:id="@+id/star3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/star"
                app:tint="@android:color/holo_red_dark"/>

            <!-- Star 4 -->
            <ImageView
                android:id="@+id/star4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/star"
                app:tint="@android:color/holo_red_dark"/>

            <!-- Star 5 -->
            <ImageView
                android:id="@+id/star5"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/star"
                app:tint="@android:color/holo_red_dark"/>
        </LinearLayout>

        <TextView
            android:id="@+id/movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_holder"
            android:textSize="16sp"
            android:textStyle="italic" />



        <!-- Year -->
    </LinearLayout>

    <Button
        android:id="@+id/watch_now_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/watch_now"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_gray"
        android:text="@string/close"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/watch_now_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
